WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205209
Help debugging flaky http/tests/cache-storage/page-cache-domcachestorage-pending-promise.html
https://bugs.webkit.org/show_bug.cgi?id=205209
Summary
Help debugging flaky http/tests/cache-storage/page-cache-domcachestorage-pend...
youenn fablet
Reported
2019-12-13 09:21:41 PST
Help debugging flaky http/tests/cache-storage/page-cache-domcachestorage-pending-promise.html
Attachments
Patch
(6.37 KB, patch)
2019-12-13 09:24 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(6.24 KB, patch)
2019-12-13 09:46 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-12-13 09:24:54 PST
Created
attachment 385610
[details]
Patch
youenn fablet
Comment 2
2019-12-13 09:46:59 PST
Created
attachment 385612
[details]
Patch
WebKit Commit Bot
Comment 3
2019-12-13 10:58:11 PST
Comment on
attachment 385612
[details]
Patch Clearing flags on attachment: 385612 Committed
r253487
: <
https://trac.webkit.org/changeset/253487
>
WebKit Commit Bot
Comment 4
2019-12-13 10:58:13 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-12-13 10:59:23 PST
<
rdar://problem/57917734
>
Alexey Proskuryakov
Comment 6
2019-12-16 13:17:57 PST
Looks like it got a lot more flaky. One recent result: @@ -1,3 +1,6 @@ +CONSOLE MESSAGE: line 31: { "path": "/var/folders/5x/tddp1dn97mjg69n9470bjmlh0000gn/T/WebKitTestRunnerApp.apps-boRyeU/CacheStorage", "origins": [ +{ "origin" : { "topOrigin" : "
http://127.0.0.1:8000
", "clientOrigin": "
http://127.0.0.1:8000
" }, "caches" : { "persistent": ["test"], "removed": []} +}]} Tests that a page with pending DOMCacheStorage activity goes into the page cache. On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE". @@ -7,9 +10,9 @@ pagehide - entering cache pageshow - from cache PASS Page was restored from Page Cache -PASS Opened the cache -PASS !!restoredFromPageCache is true +FAIL Timed out while waiting for the cache to open PASS successfullyParsed is true +Some tests failed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug