Help debugging flaky http/tests/cache-storage/page-cache-domcachestorage-pending-promise.html https://bugs.webkit.org/show_bug.cgi?id=205209

Reviewed by Chris Dumez.

Source/WebKit:

Add a bunch of asserts that no pending activity is happening in the Cache Storage backend is happening
when querying the backend representation, which is a debug tool.
No change of behavior.

* NetworkProcess/cache/CacheStorageEngine.cpp:
(WebKit::CacheStorage::Engine::representation):
* NetworkProcess/cache/CacheStorageEngineCache.h:
(WebKit::CacheStorage::Cache::hasPendingOpeningCallbacks const):
* NetworkProcess/cache/CacheStorageEngineCaches.cpp:
(WebKit::CacheStorage::Caches::appendRepresentation const):

LayoutTests:

In case of error, query the cache representation.
This will help debugging the flaky tests and ensure that no pending activity is happening in error cases.

* http/tests/cache-storage/page-cache-domcache-pending-promise.html:
* http/tests/cache-storage/page-cache-domcachestorage-pending-promise.html:


Canonical link: https://commits.webkit.org/218411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253487 268f45cc-cd09-0410-ab3c-d52691b4dbfc